2023-08-23  Fojtik Jaroslav  <JaFojtik@yandex.com>
	
	* VisualMagick\installer\inc\files-dlls.isx
	* VisualMagick\installer\inc\body.isx
	
	Prepare installation script for MSVC2013 runtime.

2023-08-22  Fojtik Jaroslav  <JaFojtik@yandex.com>
	
	* VisualMagick\installer\inc\files-dlls.isx
	* VisualMagick\installer\inc\body.isx
	
	Prepare installation script for MSVC2010 runtime.

2023-08-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c When alpha is to be used, writer must not use
	BI_BITFIELDS compression that instructs to strip alpha.

2023-08-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* tiff/libtiff/stdbool2.h MSVC2010 does not have stdbool.h nor inttypes.h

	* coders/bmp.c Added support for BI_ALPHABITFIELDS compression.
	https://learn.microsoft.com/en-us/previous-versions/windows/embedded/aa452885(v=msdn.10)
	Remove unwanted duplicite check condition of biCompression.

2023-08-19  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Reveal a contents of OS22XBITMAPHEADER.

2023-08-17  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Do not throttle on native low endian systems.

2023-08-16  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c  Populate upper byte to lower byte even for lower
	bpp than 8. It overcomes quantum scalling error in gm. Code should
	be redesigned, but it is better than previous state.

	Enforce default color masks when bmp_info.compression==BI_RGB
	Existing masks will be ignored.

2023-08-17  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c  Enforce default matte for 40 byte header & 32bpp.

2023-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): For common formats with the
	required number of channels, but one is an 'unspecified' channel,
	promote unspecified alpha to unassociated alpha so that the alpha
	channel is not ignored. Addresses the remainder of SourceForge
	issue #718 "Set reasonable defaults when writing TIFF with
	transparency".
