@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230823"
-#define public MagickPackageReleaseDate "snapshot-20230823"
+#define public MagickPackageVersionAddendum ".020230827"
+#define public MagickPackageReleaseDate "snapshot-20230827"
