@@ -37,6 +37,16 @@
 </div>
 
 <div class="document">
+<p>2023-08-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>magick/utility.c (TranslateTextEx): Restore previous
+functionality in which a NULL pointer is returned instead of an
+empty string. Some algorithms are depending on this!  Addresses
+SourceForge issue #722 v1.3.41 &quot;PerlMagick montage.t fails
+completely&quot;.</p></li>
+</ul>
+</blockquote>
 <p>2023-08-23  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 <ul>
